# training-oxcaml

./: .gitignore  README.md
bench/: Makefile  bench.ml  dune-workspace  init.ml
bench/anamorph/: Makefile  bench.ml  dune
bench/init/: Makefile  bench.ml  dune
cheatcheat/: oxcaml-modes.tex
cheatsheet/: dune  oxcaml-modes.md  oxcaml-modes.tex
contribute/: help-fix-opam.md
hello/: dune
slides/: 00_setup.html  00_setup.md  01_local_1.html  01_local_1.md  01_local_1.md-move-to-01_local_2.md  02_local_2.html  02_local_2.md  03_local_3.html  03_local_3.md  03_local_3.md-move-to-04_modes_1.md  04_modes_1.html  04_modes_1.md  dune  dune~  local-0.html  local-1.html  local-1.md  monad.html  offsite.html  offsite.md  remark.ml
src/bench/: Makefile  dune  iter.ml
src/exclave/: anamorph.ml  dune  show.ml
src/hello/: hello.ml
src/typing/: apply.t  arrow.ml  dune  lattice.ml  lattice.t
src/with_session/: dune  session.t
with_session/: session.ml
