(executable
 (name remark)
 (modules remark))

(rule
 (deps 00_setup.md)
 (target 00_setup.html)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run ./remark.exe %{deps} "OxCaml 0: Set-up"))))

(rule
 (deps 01_local_1.md)
 (target 01_local_1.html)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run ./remark.exe %{deps} "OxCaml 1: Locality 1"))))
