(executable
 (name remark)
 (modules remark))

(rule
 (deps 00_setup.md)
 (target 00_setup.html)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run ./remark.exe %{deps} "OxCaml 00 — Set-up"))))

(rule
 (deps 01_local_1.md)
 (target 01_local_1.html)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run ./remark.exe %{deps} "OxCaml 01 — Locality 1"))))

(rule
 (deps 02_local_2.md)
 (target 02_local_2.html)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run ./remark.exe %{deps} "OxCaml 02 — Locality 2"))))

(rule
 (deps 03_local_3.md)
 (target 03_local_3.html)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run ./remark.exe %{deps} "OxCaml 03 — Locality 3"))))

(rule
 (deps 04_modes_1.md)
 (target 04_modes_1.html)
 (mode promote)
 (action
  (with-stdout-to
   %{target}
   (run ./remark.exe %{deps} "OxCaml 04 — Modes 1"))))
